--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,31 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
+    <script>
+      window.fbAsyncInit = function () {
+        FB.init({
+          appId: "267103778007056",
+          cookie: true,
+          xfbml: true,
+          version: "v7.0",
+        });
+
+        FB.AppEvents.logPageView();
+      };
+
+      (function (d, s, id) {
+        var js,
+          fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) {
+          return;
+        }
+        js = d.createElement(s);
+        js.id = id;
+        js.src = "https://connect.facebook.net/en_US/sdk.js";
+        fjs.parentNode.insertBefore(js, fjs);
+      })(document, "script", "facebook-jssdk");
+    </script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
